force-app/main/default/objects/Compliance__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <inlineHelpText>The Applicant for the Application</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Compliance</relationshipLabel>
    <relationshipName>Compliance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>