force-app/main/default/objects/Compliance__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Applicant__r.Name</formula>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>