force-app/main/default/objects/Compliance__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Add Internal Comment for the Underwriter pertaining to this Compliance Requirement</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>