force-app/main/default/objects/Compliance__c/fields/CR_Rating__c.field-meta.xml
<CustomField>
    <fullName>CR_Rating__c</fullName>
    <label>CR Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>