force-app/main/default/objects/Compliance__c/fields/If_yes__c.field-meta.xml
<CustomField>
    <fullName>If_yes__c</fullName>
    <label>If yes</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>