force-app/main/default/objects/Compliance__c/fields/Lending_Application__c.field-meta.xml
<CustomField>
    <fullName>Lending_Application__c</fullName>
    <inlineHelpText>Lookup to what application this compliance record links to</inlineHelpText>
    <label>Lending Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>