force-app/main/default/objects/Compliance__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Geography</fullName>
            </value>
            <value>
                <fullName>Client Characteristics</fullName>
            </value>
            <value>
                <fullName>Occupation/Industry</fullName>
            </value>
            <value>
                <fullName>Single High-Risk Factors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>