force-app/main/default/objects/Compliance__c/recordTypes/Client_Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Client_Risk_Assessment</fullName>
    <active>true</active>
    <description>Track all questions being asked as a part of the Client Risk Assessment form</description>
    <label>Client Risk Assessment</label>
</RecordType>