force-app/main/default/objects/Compliance__c/recordTypes/Transaction_checklist.recordType-meta.xml
<RecordType>
    <fullName>Transaction_checklist</fullName>
    <active>true</active>
    <description>To Track all the questions being asked as a part of transaction checklist</description>
    <label>Transaction checklist</label>
</RecordType>