force-app/main/default/objects/Compliance__c/validationRules/Fill_out_the_rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_out_the_rating</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Client_Risk_Assessment&apos;
&amp;&amp; ISPICKVAL(Rating__c,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Please enter your rating for the question</errorMessage>
</ValidationRule>