force-app/main/default/objects/Compliance__c/validationRules/fill_the_Answer.validationRule-meta.xml
<ValidationRule>
    <fullName>fill_the_Answer</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Transaction_checklist&apos; 
&amp;&amp; ISPICKVAL(Answer__c,&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Answer__c</errorDisplayField>
    <errorMessage>Please select an answer to the question</errorMessage>
</ValidationRule>