force-app/main/default/objects/Compliance__c/listViews/All_Client_Risk_Assessment.listView-meta.xml
<ListView>
    <fullName>All_Client_Risk_Assessment</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Type__c</columns>
    <columns>Rating__c</columns>
    <columns>Applicant_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance__c.Client_Risk_Assessment</value>
    </filters>
    <label>All Client Risk Assessment</label>
</ListView>