force-app/main/default/objects/Compliance__c/listViews/All_Transaction_Checklist.listView-meta.xml
<ListView>
    <fullName>All_Transaction_Checklist</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>Applicant_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compliance__c.Transaction_checklist</value>
    </filters>
    <label>All Transaction Checklist</label>
</ListView>